--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
         width: 100%;
         height: 90vh;
         background-color: #f5f5f5;
+        --min-hotspot-opacity: 0;
       }
 
       /* The White Buttons (Hotspots) */
@@ -21,10 +22,15 @@
         border: 3px solid #007bff;
         cursor: pointer;
         box-shadow: 0 2px 4px rgba(0,0,0,0.3);
-        transition: transform 0.3s;
+        transition: transform 0.3s, opacity 0.3s;
       }
 
-      /* Hide info boxes by default */
+      /* Keep hotspots visible even when behind the model (optional) */
+      .Hotspot:not([data-visible]) {
+        opacity: 0.4;
+      }
+
+      /* Info Box Styling */
       .HotspotAnnotation {
         display: none;
         background: #ffffff;
@@ -39,10 +45,10 @@
         font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
         line-height: 1.5;
         z-index: 100;
-        pointer-events: auto; /* Allows you to scroll/click inside the box */
+        pointer-events: auto;
       }
 
-      /* Class to show the info when toggled */
+      /* Show info when button is active */
       .active .HotspotAnnotation {
         display: block;
       }
@@ -57,45 +63,55 @@
                   src="finalKonark-v1 (4).glb" 
                   ar ar-modes="scene-viewer webxr quick-look" 
                   camera-controls 
-                  shadow-intensity="1">
+                  shadow-intensity="1"
+                  camera-orbit="45deg 75deg 15m" 
+                  field-of-view="35deg"
+                  data-js-focus-visible>
       
       <button class="Hotspot" slot="hotspot-3" 
-              data-position="0.10445672255424832m -0.7710759617459311m -4.372431650946587m" 
-              data-normal="-0.9717788715225063m 0.1797882146781417m 0.15271549602214804m">
+              data-position="0.1044m -0.7710m -4.3724m" 
+              data-normal="-0.9717m 0.1797m 0.1527m"
+              data-visibility-attribute="visible">
           <div class="HotspotAnnotation">
               <h3>Main Tower (Vimana)</h3>
-              <p>This is the principal shrine of the Konark Sun Temple, symbolizing Mount Meru, the cosmic center of the universe.</p>
+              <p>This is the principal shrine of the Konark Sun Temple, symbolizing Mount Meru.</p>
           </div>
       </button>
 
       <button class="Hotspot" slot="hotspot-8" 
-              data-position="0.6554348898181508m -1.9247499110575936m -1.3890951899779624m" 
-              data-normal="-0.0009047585838649483m 0.9999728723895843m -0.007309986103211903m">
+              data-position="0.6554m -1.9247m -1.3890m" 
+              data-normal="-0.0009m 0.9999m -0.0073m"
+              data-visibility-attribute="visible">
           <div class="HotspotAnnotation">
               <h3>Jagamohana</h3>
-              <p>The grand audience hall where devotees gathered. Its roof is shaped like a pyramid with intricate carvings.</p>
+              <p>The grand audience hall where devotees gathered. It features a pyramidal roof with intricate carvings.</p>
           </div>
       </button>
 
     </model-viewer> 
 
     <script>
-      const viewer = document.querySelector("#konark-viewer");
       const hotspots = document.querySelectorAll(".Hotspot");
 
       hotspots.forEach((hotspot) => {
         hotspot.addEventListener('click', (event) => {
-          // 1. Prevent the model from moving/rotating when clicking the button
+          // Stop rotation/movement when clicking
           event.stopPropagation();
 
-          // 2. Close all other open annotations first
+          // Close others
           hotspots.forEach(h => {
             if (h !== hotspot) h.classList.remove('active');
           });
 
-          // 3. Toggle the clicked one
+          // Toggle current
           hotspot.classList.toggle('active');
         });
+      });
+
+      // Close annotation if you click on the model background
+      document.querySelector('#konark-viewer').addEventListener('click', (event) => {
+        if (event.target.classList.contains('Hotspot')) return;
+        hotspots.forEach(h => h.classList.remove('active'));
       });
     </script>
 
