--- a/index.html
+++ b/index.html
@@ -8,9 +8,8 @@
     <style>
       model-viewer {
         width: 100%;
-        height: 90vh;
+        height: 95vh;
         background-color: #f5f5f5;
-        --min-hotspot-opacity: 0;
       }
 
       /* The White Buttons (Hotspots) */
@@ -25,9 +24,9 @@
         transition: transform 0.3s, opacity 0.3s;
       }
 
-      /* Keep hotspots visible even when behind the model (optional) */
-      .Hotspot:not([data-visible]) {
-        opacity: 0.4;
+      /* CRITICAL FOR MOBILE: Show hotspots in AR mode */
+      #konark-viewer[ar-status="session-started"] .Hotspot {
+        display: block;
       }
 
       /* Info Box Styling */
@@ -36,37 +35,35 @@
         background: #ffffff;
         border-radius: 8px;
         box-shadow: 0 4px 15px rgba(0,0,0,0.25);
-        padding: 15px;
+        padding: 12px;
         position: absolute;
-        width: 280px;
-        left: 30px;
+        width: 220px; /* Slightly smaller for mobile screens */
+        left: 25px;
         top: -20px;
         color: #333;
-        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-        line-height: 1.5;
+        font-family: sans-serif;
+        line-height: 1.4;
         z-index: 100;
-        pointer-events: auto;
       }
 
-      /* Show info when button is active */
       .active .HotspotAnnotation {
         display: block;
       }
 
-      h3 { margin: 0 0 8px 0; font-size: 18px; color: #007bff; }
-      p { margin: 0; font-size: 14px; }
+      h3 { margin: 0 0 5px 0; font-size: 16px; color: #007bff; }
+      p { margin: 0; font-size: 13px; }
     </style>
   </head>
   <body>
 
     <model-viewer id="konark-viewer" 
-                  src="finalKonark-v1 (4).glb" 
-                  ar ar-modes="scene-viewer webxr quick-look" 
+                  src="finalKonark (1).glb" 
+                  ar 
+                  ar-modes="webxr quick-look scene-viewer" 
                   camera-controls 
                   shadow-intensity="1"
                   camera-orbit="45deg 75deg 15m" 
-                  field-of-view="35deg"
-                  data-js-focus-visible>
+                  field-of-view="35deg">
       
       <button class="Hotspot" slot="hotspot-3" 
               data-position="0.1044m -0.7710m -4.3724m" 
@@ -74,7 +71,7 @@
               data-visibility-attribute="visible">
           <div class="HotspotAnnotation">
               <h3>Main Tower (Vimana)</h3>
-              <p>This is the principal shrine of the Konark Sun Temple, symbolizing Mount Meru.</p>
+              <p>The principal shrine of the Konark Sun Temple, symbolizing Mount Meru.</p>
           </div>
       </button>
 
@@ -84,8 +81,12 @@
               data-visibility-attribute="visible">
           <div class="HotspotAnnotation">
               <h3>Jagamohana</h3>
-              <p>The grand audience hall where devotees gathered. It features a pyramidal roof with intricate carvings.</p>
+              <p>The grand audience hall where devotees gathered. It features a pyramidal roof.</p>
           </div>
+      </button>
+
+      <button slot="ar-button" style="background-color: white; border-radius: 4px; border: none; position: absolute; top: 16px; right: 16px; padding: 10px;">
+          👋 View in AR
       </button>
 
     </model-viewer> 
@@ -94,21 +95,17 @@
       const hotspots = document.querySelectorAll(".Hotspot");
 
       hotspots.forEach((hotspot) => {
-        hotspot.addEventListener('click', (event) => {
-          // Stop rotation/movement when clicking
+        // Use 'pointerdown' for better mobile touch response
+        hotspot.addEventListener('pointerdown', (event) => {
           event.stopPropagation();
-
-          // Close others
           hotspots.forEach(h => {
             if (h !== hotspot) h.classList.remove('active');
           });
-
-          // Toggle current
           hotspot.classList.toggle('active');
         });
       });
 
-      // Close annotation if you click on the model background
+      // Close if user taps the model background
       document.querySelector('#konark-viewer').addEventListener('click', (event) => {
         if (event.target.classList.contains('Hotspot')) return;
         hotspots.forEach(h => h.classList.remove('active'));
